--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,7 @@
 
     </dependencies>
     <build>
+        <finalName>security-utils</finalName>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
