--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,12 @@
             <artifactId>jackson-databind</artifactId>
             <version>2.15.1</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.26</version>
+            <scope>provided</scope>
+        </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-web</artifactId>
@@ -46,6 +51,7 @@
             <version>6.0.0</version>
             <scope>provided</scope>
         </dependency>
+
 
         <dependency>
             <groupId>com.github.yalooStore</groupId>
